@@ -4,6 +4,7 @@ ver 0.16.4 (2011/??/??)
 * decoder:
   - ffmpeg: workaround for semantic API change in recent ffmpeg versions
   - flac: validate the sample rate when scanning the tag
+  - wavpack: obey all decoder commands, stop at CUE track border
 * output:
   - alsa: fix SIGFPE when alsa announces a period size of 0
 
